2007-11-23  Mathias Hasselmann  <mathias@openismus.com>

	Start with EpcServiceMonitor class.

	* docs/reference/libepc/libepc-1.0-docs.xml: Re-order sections.
	* docs/reference/libepc/libepc-1.0-sections.txt: Update symbols.
	* libepc/marshal.list: Add VOID:STRING,STRING,STRING,UINT.
	* Makefile.am: Add libepc/service-monitor.c and
	libepc/service-monitor.h.

2007-11-22  Mathias Hasselmann  <mathias@openismus.com>

	Change some function signatures for consistency.

	* libepc/consumer.c, libepc/consumer.h: Change return
	type of epc_consumer_lookup from "gchar*" to "gpointer".
	* libepc/contents.c, libepc/contents.h: Change data argument type
	from "const gpointer" to "gconstpointer" for epc_contents_new_dup.
	Move length argument behind data for consistency.
	* libepc/publisher.c, libepc/publisher.h: Rename value argument to
	data and change its type from "const gchar*" to "gconstpointer"
	for consistency.
	* examples/simple-publisher.c: Change order of length and
	data argument when using epc_contents_new.

2007-11-22  Mathias Hasselmann  <mathias@openismus.com>

	Improve memory handling of EpcContents.

	* libepc/contents.c, libepc/contents.h: Add destroy_data argument to
	epc_contents_new. Add new epc_contents_new_dup function.
	* libepc/publisher.c, examples/simple-publisher.c: Pass g_free
	as destroy_data argument to epc_contents_new.
	* docs/reference/libepc/libepc-1.0-sections.txt: Update symbols.

2007-11-22  Mathias Hasselmann  <mathias@openismus.com>

	Implement streaming capabilities.

	* Makefile.am: Add libepc/contents.c and libepc/contents.h.
	* libepc/contents.c, libepc/contents.h: Move EpcContents buffer
	into separate files. Add EpcContentsReadFunc, epc_contents_get_data,
	epc_contents_get_mime_type, epc_contents_stream_new,
	epc_contents_stream_read and epc_contents_is_stream.
	* libepc/publisher.c, libepc/publisher.h: Remove EpcContents.
	Implement streaming of large objects.
	* docs/reference/libepc/libepc-1.0-sections.txt: Update symbols.
